Fix super wonky graph alignments on small screen sizes
* Fixed placement of text below the graph on screens < 850
* Fixed placement of the ages, bars, and the slider path on screens <
850

--- a/retirement_api/static/retirement/css/claiming.css
+++ b/retirement_api/static/retirement/css/claiming.css
@@ -918,9 +918,13 @@ form {
     left: -57px;
   }
 
+  #claiming-social-security .canvas-container .x-axis-label {
+    top: 20px;
+  }
+
   #claiming-social-security .selected-retirement-age-container {
     height: auto;
-    margin-top: 285px;
+    margin-top: 425px;
   }
 
   #claiming-social-security .canvas-container {
